# Reef

./: .TEMP.rs.swp  .gitignore  .gitmodules  .out.swp  .txt.swp  Cargo.toml  Data cleaning.ipynb  Dockerfile  EMOTET PCAP RULES  LICENSE  PROFILING.md  README.md  TEMP.rs  _dfa  circom_input.json  circom_witness.wtns  constraint_table_shell  document  eli.rs  email_out  eq  fig5_shell  file.txt  large_doc.zok  logging  match.circom  match.r1cs  match.sym  match.zok  match2.zok  mem_logging  mem_logging_1  mem_logging_2  mem_logging_large  mem_logging_small  naive.zok  out  out2  overall_table_shell  r  (+7 more)
.circleci/: config.yml
.github/: workflows
.github/workflows/: rust-check-test 2.yml  rust-check-test.yml
.ipynb_checkpoints/: Data cleaning-checkpoint.ipynb  DataCleaning-checkpoint.ipynb
Nova-Scotia/: Cargo.toml
Nova-Scotia/examples/: toy.r1cs  toy.sym
Nova-Scotia/examples/bitcoin/: bitcoin_benchmark 2.circom
Nova-Scotia/examples/toy/: utils.circom
Nova-Scotia/examples/toy_js/: toy.wasm
Nova-Scotia/src/: lib.rs
Nova-Scotia/src/circom/: circuit.rs  file.rs
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: regex.rs
graphs/: Makefile  dfa.dot
match_cpp/: Makefile  match
match_js/: match.wasm
metrics/: Cargo.toml  metrics.rs
min/: Cargo.toml
min/src/: main.rs
paper/: GNUmakefile  abstract.tex  body.tex  introduction.tex  main.bib  main.tex
src/: .dfa.rs.swp  .main.rs.swp  .poly.rs.swp  .r1cs.rs.swp  cond.rs  config 3.rs  config.rs  costs.rs  deriv.rs  dfa 3.rs  dfa.rs  domain.rs  lib.rs  main 3.rs  main.rs  metrics.rs  nfa.rs  old_circuits.rs  openset.rs  ordered_unordered_set.rs  parser.rs  plot 3.rs  plot.rs  poly.rs  quantifier.rs  r1cs.rs  regex.rs  safa.rs  skip.rs  snfa.rs  trace.rs
src/backend/: .commitment.rs.swp  .merkle_tree.rs.swp  .nova.rs.swp  .r1cs.rs.swp  .r1cs_helper.rs.swp  commitment.rs  costs 3.rs  costs.rs  framework 3.rs  framework.rs  merkle_tree.rs  mod 2.rs  mod.rs  nova 2.rs  nova.rs  old_circuits 2.rs  old_circuits.rs  r1cs 3.rs  r1cs.rs  r1cs_helper.rs
src/frontend/: mod.rs  openset.rs  quantifier 2.rs  quantifier.rs  safa.rs
src/frontend/regex/: arbitrary.rs  mod.rs  ord.rs  parser.rs
src/naive/: dfa.rs  mod.rs  naive.rs  naive_circom_writer.rs  naive_deriv.rs  naive_nova.rs  naive_parser.rs  naive_wr.rs  naive_wr_circom_writer.rs  naive_wr_nova.rs
src/naive/naive_regex/: mod.rs  naive_ord.rs  naive_parser.rs
src/naive_wr/: dfa.rs  mod.rs  naive_circom_writer.rs  naive_nova.rs  naive_wr.rs
src/naive_wr/naive_regex/: mod.rs  naive_ord.rs  naive_parser.rs
src/regex/: charclass.rs  dnf.rs  mod.rs  ord.rs  parser.rs
testing/: brca2_normal.txt  brca2_v1_annotated.txt  nsf_data_bad_address.csv  nsf_data_clean.csv
tests/: BRCA2_Var1  dns_iran.sh  dns_rawbytes.txt  dnspayloads.txt  dpi.rs  http_tcp_raw.txt  nsf_bad_phone.csv  nsf_data_bad_address.csv  nsf_data_original.csv  packet_regex  pii_regex.txt  qakbotdownload.txt  timer.rs
tests/docs/: BRCA1_base1m  BRCA1_base1m+primary  BRCA1_base1m+var2  BRCA1_primary  BRCA1_var2_clean  BRCA2_base1m  BRCA2_base1m+primary  BRCA2_base1m+var1  BRCA2_primary_clean  DLP_100B  DLP_2000B  date_100B  date_2000B  doclen_2pow10_90state  doclen_2pow12_90state  doclen_2pow14_90state  doclen_2pow8_90state  email_100B  email_2000B  email_large  email_med  email_small  http_mb1  http_mb2  uri_100B  uri_2000B  uri_email_100B  uri_email_2000B
tests/regexs/: DNA_Regex  packet_regex
tests/results/: Data.ipynb  bad_pass  bad_pass.txt  bad_pass_hybrid  bad_pass_hybrid.txt  brca1_primary_match_merkle  brca1_primary_match_proj  brca1_primary_nonmatch1  brca1_primary_nonmatch1_1m  brca1_primary_nonmatch1_1m_m  brca1_primary_nonmatch1_1m_proj  brca1_primary_nonmatch1_proj  brca1_primary_nonmatch2  brca1_primary_nonmatch2_1m  brca1_primary_nonmatch2_1m_hybrid  brca1_primary_nonmatch2_1m_m  brca1_primary_nonmatch2_1m_proj  brca1_primary_nonmatch2_proj  brca1_var1_match  brca1_var1_match_1m  brca1_var1_match_1m_m  brca1_var1_match_1m_proj  brca1_var1_match_proj  brca1_var1_nonmatch1  brca1_var1_nonmatch2  brca1_var1_nonmatch_1m  brca1_var1_nonmatch_1m_m  brca1_var1_nonmatch_1m_proj  brca1_var1_nonmatch_proj  brca1_var2_match  brca1_var2_match_1m  brca1_var2_match_1m_m  brca1_var2_match_1m_proj  brca1_var2_match_proj  brca1_var2_nonmatch1  brca1_var2_nonmatch2  brca1_var2_nonmatch_1m  brca1_var2_nonmatch_1m_m  brca1_var2_nonmatch_1m_proj  brca1_var2_nonmatch_proj  (+28 more)
tests/results/1012/: bad_pass_hybrid.txt  brca1_var1_match_1m_m  brca1_var2_match_1m  email_dkim.txt  good_pass.txt  pihole_hybrid.txt
tests/results/1013/: bad_pass.txt  bad_pass_hybrid.txt  email_dkim.txt  (+15 more)
tests/scripts/: .comp.sh.swp  comp.sh  dna.sh  dna1m.sh  dns_adult.sh  dns_iran.sh  dns_notyoutube.sh  doc_size.sh  email_dkim.sh  full_comp.sh  http.sh  mini_comp.sh  naive-mini.sh  naive.sh  nwr-mini.sh  nwr.sh  password.sh  pihole.sh  pii.sh  reef-mini.sh  reef.sh  reef_h.sh  reef_hybrid.sh  safa_nlookup-mini.sh  safa_nlookup.sh  zombie.sh
(+161 files in other folders)
