[package]
name = "reef"
version = "0.1.0"
edition = "2021"

[dependencies]
gmp-mpfr-sys = { version = "1.4" }
hashconsing = { git = "https://github.com/alex-ozdemir/hashconsing.git", branch = "phash"}
clap = "4.1.8"
circ = { git = "https://github.com/jkwoods/circ", branch = "r1cs_pub", features = ["r1cs", "bellman"] }
regex-syntax = "0.6"
itertools = "0.10"
nova-snark ={ git = "https://github.com/jkwoods/Nova" }
#nova-snark ={ git = "https://github.com/sga001/Nova", rev = "e06cea1" }
bellperson = { version = "0.24", default-features = false }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
ff = "0.12.0"
prettyprint = "0.8.1"
rug = { version = "1.11", features = ["serde"] }
fxhash = "0.2"
neptune = "8.1.0"
generic-array = "0.14.4"
bitvec = "1"
dot = { git = "https://github.com/elefthei/dot-rust", branch = "utf8", optional = true }
serial_test = "1.0.0"
cached = "0.42.0"
rand = "0.8.4"
merlin = {version = "3.0.0", default-features = false }
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = [ "html_reports" ] }
csv = "1.2"
dashmap = "5.4.0"

[features]
default = ["plot"]
plot = ["dep:dot"]

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

