[package]
name = "reef"
version = "0.1.0"
edition = "2021"

[dependencies]
gmp-mpfr-sys = { version = "1.4" }
hashconsing = { git = "https://github.com/alex-ozdemir/hashconsing.git", branch = "phash"}
clap = "4.1.8"
circ = { git = "https://github.com/jkwoods/circ", branch = "r1cs_pub", features = ["r1cs", "bellman", "smt", "zok"] }
itertools = "0.10"
nova-snark ={ git = "https://github.com/sga001/Nova"}
bellperson = { version = "0.24", default-features = false }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
ff = "0.12.0"
prettyprint = "0.8.1"
rug = { version = "1.11", features = ["serde"] }
fxhash = "0.2"
neptune = "8.1.0"
generic-array = "0.14.4"
bitvec = "1"
serial_test = "1.0.0"
rand = "0.8.4"
merlin = {version = "3.0.0", default-features = false }
lazy_static = "1.4.0"
csv = "1.2"
dashmap = { version = "5.4", optional = true }
serde = "1.0.162"
serde_json = "1.0.96"
rayon = "1.7"
petgraph = "0.6"
printpdf = "0.5.3"
fancy-regex = "0.11.0"
regex-syntax = "0.6.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
backtrace-on-stack-overflow = "0.3.0"
memory-stats = "1.1.0"
nova-scotia = "0.5.0"
execute = "0.2.12"

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.3.0"


[dev-dependencies]
criterion = { version = "0.4", features = [ "html_reports" ] }

[features]
default = []
metrics = ["dep:dashmap"]
plot = []

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

