[package]
name = "rezk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashconsing = { git = "https://github.com/alex-ozdemir/hashconsing.git", branch = "phash"}
ark-ec = { version = "^0.3.0" }
ark-ff = { version = "^0.3.0", features=["std"] }
ark-std = "^0.3.0"
ark-relations = "^0.3.0"
ark-r1cs-std = { version = "^0.3.0", features = ["std"] }
ark-pallas = "^0.3.0"
itertools = "0.10"
pasta_curves = { version = "0.4.0", features = ["repr-c"] }
ark-poly = { version = "^0.3.0", default-features = false }


